--- a/artcatalog/package.json
+++ b/artcatalog/package.json
@@ -27,6 +27,8 @@
     "@fullcalendar/daygrid": "~4.3.0",
     "@fullcalendar/interaction": "~4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@syncfusion/ej2-angular-inputs": "^17.3.29",
     "@types/mapbox-gl": "^1.3.0",
     "ajv": "^6.10.2",
     "angular-font-awesome": "^3.1.2",
