--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.5.0",
     "ng-recaptcha": "^5.0.0",
-    "ng2-charts": "^2.3.0",
+    "ng2-charts": "^1.6.0",
+    "ng2-completer": "^3.0.3",
+    "ng2-smart-table": "1.3.5",
     "ngx-auth": "^5.2.0",
     "ngx-bootstrap": "^5.2.0",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
