--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mapbox-gl": "^1.3.0",
     "ajv": "^6.10.2",
     "angular-font-awesome": "^3.1.2",
+    "angular-popper": "^2.0.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "fast-deep-equal": "^2.0.1",
@@ -45,6 +46,7 @@
     "ngx-auth": "^5.2.0",
     "ngx-bootstrap": "^5.2.0",
     "node-sass": "^4.13.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.3",
     "zone.js": "~0.8.26"
