--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/angular": "^22.0.0",
     "@agm/core": "^1.0.0-beta.7",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
