--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/interaction": "~4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@ng-select/ng-select": "^2.20.5",
     "@syncfusion/ej2-angular-inputs": "^17.3.29",
     "@types/mapbox-gl": "^1.3.0",
     "ajv": "^6.10.2",
@@ -50,6 +51,7 @@
     "ng2-smart-table": "1.3.5",
     "ngx-auth": "^5.2.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-pagination": "^5.0.0",
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.3.3",
