--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ng2-smart-table": "1.3.5",
     "ngx-auth": "^5.2.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-mask": "^8.1.7",
     "ngx-pagination": "^5.0.0",
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
